tests/errors/match-or-pattern-binding.ari
enum OptionI32 {
  None,
  Some(i32),
}

fn main() -> i64 {
  return match Some(1) {
    Some(value) | None => value as i64,
  };
}
